[package]
name = "flatpak-oci-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
env_logger = "0.10.0"
flate2 = "1.0.27"
indoc = "2.0.3"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.40"
tempfile = "3.8.0"
